# python-ithome

./: .gitignore  LICENSE  README.md  pyproject.toml
01_Introduction/: 01_note.md  hello_world.py
02_Variables/: 02_note.md  variables.py
03_Operators/: 03_note.md  operators.py
04_Strings/: 04_note.md  strings.py
05_Lists/: 05_notes.md  lists.py
06_Tuples/: 06_note.md  06_notes.md  tuples.py
07_Sets/: 07_note.md  sets.py
08_Dictionaries/: 08_note.md  dictionaries.py
09_Conditionals/: 09_note.md  conditionals.py
10_Loops/: 10_note.md  loops.py
11_Functions/: 11_note.md  functions.py
12_Modules/: 12_note.md  main.py  modules.py  my_module.py  script.py
13_List Comprehension/: 13_note.md  list_comprehension.py
14_High Order Functions/: 14_note.md  high_order_functions.py
15_Type Errors/: 15_note.md
16_Date Time/: 16_note.md  date_time.py
17_Exception Handling/: 17_note.md  exception_handling.py
18_Regular Expression/: 18_note.md  regex.py
19_File Handling/: 19_note.md
20_PIP/: 20_note.md  pip.py
21_Classes and Objects/: 21_note.md
my_package/: arithmetics.py  greet.py
