[tool.poetry]
name = "python-ithome"
version = "0.1.0"
description = "This is a Python learning project which is inspired by 30-Days-Of-Python."
authors = ["chienchuanw <chienchuanwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
